# Template

./: CMakeLists.txt
Drivers/STM32F4xx_StdPeriph_Driver/inc/: stm32f4xx.h
app/: CMakeLists.txt
app/Hello/: CMakeCache.txt  CMakeLists.txt  FreeRTOSConfig.h  Makefile  cmake_install.cmake  compile_commands.json  debug_info.c  main.c
app/Period_Timer/: main.c
app/SPI/: main.c
app/Serial/: main.c
app/Test/: main.c
arch/: CMakeLists.txt
arch/arm/arm-v7m/cortex-m3/: cortex_m3_startup_gcc.s
arch/cortex-m4/: cortex-m4.cmake  cortex_m4_startup_gcc.s  port.c
arch/riscv/hpm/toolchains/gcc/: start.S
board/: CMakeLists.txt
board/HPM6450/: board_bsp.c  flash.ld  flash_sdram_uf2.ld  flash_sdram_xip.ld  flash_uf2.ld  flash_xip.ld  ram.ld  ram_core1.ld
board/HPM6450/bsp/: hpm6450dp_uart12.c
board/HPM6450/gdb/: ram.gdb
board/stm32f103_ethercat/: board_bsp.c  stm32f103_flash_sram.ld
board/stm32f103_ethercat/bsp/: esc_gpio.c
board/stm32f103_ethercat/bsp/spi/: stm32f103_ethercat_spi.c  stm32f103_spi2.c
board/stm32f103_ethercat/bsp/timer/: stm32f103_timer2.c
board/stm32f103_ethercat/bsp/uart/: stm32f103_debug_uart.c
board/stm32f407/: stm32f407_flash_sram.ld
component/: CMakeLists.txt
component/debug/: serial_debug.c
component/ssc/: ssc_adapter.c  ssc_adapter.h
drivers/: CMakeLists.txt
drivers/Common_Drivers/ET1100/: et1100.c  et1100.h
drivers/STM32F10x_StdPeriph_Driver/inc/: stm32f10x.h
drivers/STM32F10x_StdPeriph_Driver/src/: system_stm32f10x.c
drivers/STM32F4xx_StdPeriph_Driver/inc/: stm32f4x7_eth_conf.h
drivers/STM32F4xx_StdPeriph_Driver/src/: system_stm32f4xx.c
kernel/FreeRTOS/: tasks.c
subsys/: CMakeLists.txt
subsys/period_timer_hal/: subsys_period_timer.c  subsys_period_timer.h
subsys/spi_hal/: subsys_spi.c  subsys_spi.h
subsys/uart_hal/: subsys_uart.h
tools/compile_cmake/: arm-none-eabi.cmake
